--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
   },
   "dependencies": {
     "@nestjs/axios": "^3.0.3",
-    "@nestjs/common": "^10.0.0",
-    "@nestjs/core": "^10.0.0",
+    "@nestjs/common": "^10.4.4",
+    "@nestjs/core": "^10.4.4",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-socket.io": "^10.4.4",
+    "@nestjs/websockets": "^10.4.4",
     "@prisma/client": "^5.19.0",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
@@ -36,8 +38,9 @@
     "dotenv": "^16.4.5",
     "joi": "^17.13.3",
     "pdfmake": "^0.2.12",
-    "reflect-metadata": "^0.2.0",
+    "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "socket.io": "^4.8.0",
     "streamifier": "^0.1.1"
   },
   "devDependencies": {
