Fix(fonts roboto)

--- a/dockerfile.prod
+++ b/dockerfile.prod
@@ -23,12 +23,14 @@ COPY --from=deps /usr/src/app/node_modules ./node_modules
 #Copiar todo el codigo fuente de la app
 COPY . .
 
-COPY ./fonts /usr/src/app/fonts
+
 
 RUN npx prisma generate
 
 #RUN npm run test
 RUN npm run build
+
+RUN mkdir -p dist/src/Roboto && cp -r src/Roboto dist
 
 RUN npm ci -f --only=production && npm cache clean --force
 
@@ -43,7 +45,7 @@ COPY --from=build /usr/src/app/node_modules ./node_modules
 
 #Copior la carpeta de DIST
 COPY --from=build /usr/src/app/dist ./dist
-COPY --from=build /usr/src/app/fonts ./fonts
+# COPY --from=build /usr/src/app/Roboto ./Roboto
 
 ENV NODE_ENV=production
 
